app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require jquery.ui.all
 *= require_tree .
 */

 body{
  margin: 0;
}
 nav{
  font-family: 'Lato', sans-serif;
  height: 2.5em;
  background-color: black;
  color: white;
  text-decoration: none;

  .white_bar{
    margin-left: 0.5%;
    display: inline-block;
    width: 0.35%;
    background-color: white;
    height: 2em;
  }

  .right_side_nav_links{
    float: right;
    margin: 0.5em 5% auto auto;
    display: inline-block;

    a{
      color: #999999;
    }
  }

  .challenge_comment_area{
    width: 40%;
    display: block;
    float: right;
  }

  .lost_password{
    font-size: 0.2em;
  }

  .logo{
    margin: auto;
    font-size: 1.3em;
    display: inline-block;
    margin: 0.1em auto auto 0.5%;
  }

  a{
    color:white;
    text-decoration: none;
  }
  a:hover{
    color: white;
  }
}

.main{
  margin: auto;
  width: 80%;
}

.this_challenge{
  width: 55%;
}

.challenge_nav{
  -moz-border-radius-bottomleft:20px;
  -moz-border-radius-bottomright:20px;
  -webkit-border-bottom-left-radius:20px;
  -webkit-border-bottom-right-radius:20px;
  border-bottom-left-radius:20px;
  border-bottom-right-radius:20px;
  padding: 0 0.5em 0.5em 0.5em;
  float: right;
  margin-top: 0em;
  margin-right: -7%;
  background-color: black;
  a{
    text-decoration: none;
    color: #999999;
  }
  a:hover{
    color: white;
  }
}
// .each_challenge_link{

// }
#challenge_index{
  margin-top: 1em;
  padding: 1.5em;
  -moz-box-shadow:inset -3px 2px 6px #000000;
  -webkit-box-shadow:inset -3px 2px 6px #000000;
  box-shadow:inset -3px 2px 6px #000000;
  float: left;
  width: 60%;

  h1{
    margin-top: 0;
    padding-top: 0;
  }

  :nth-child(even){
    padding: 0.5em;
    background-color: #F5F5F5;
    a{
      background-color: #F5F5F5;
      color: black;
      text-decoration: none;
    }
    a:hover{
      text-decoration: underline;
    }
  }
  :nth-child(odd){
    padding: 0.5em;
    background-color: white;
    text-decoration: underline;
    a{
      background-color: white;
      color: black;
      text-decoration: none;
    }
    a:hover{
      text-decoration: underline;
    }
  }
}

#challenge_heads_up{
  padding: 0.5em;
  background-color: #F5F5F5;
  text-align: center;
}

#right_nav{
  margin-top: 3em;
  float: right;
  width: 30%;
  img{
    width: 40%;
  }
}

.day_links:hover {
  color: white;
}

.day_links {
  color: purple;
}

.destroy_link{
  a{
    color: red;
  }
}

// footer {
//   clear:both;
//   background:#cc9;
// }

